# m3u8-to-mp4-converter

./: .env.example  .gitignore  README.md  build.bat  build_auto.bat  build_fixed.bat  build_pyinstaller.bat  build_with_compiler.bat  check_compiler.bat  claude.md  diagnose.py  diagnose_vs.bat  main.py  pyproject.toml  quick_convert.py  requirements.txt  test_convert.py
.claude/: settings.local.json
i18n/: en_US.ts  zh_CN.ts
resources/: styles.qss
src/: __init__.py  converter.py  downloader.py
tests/: test_converter.py
ui/: __init__.py  fluent_main_window.py  main_window.py
