[project]
name = "m3u8-to-mp4-converter"
version = "1.0.0"
description = "M3U8 视频转换器 - 桌面应用"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15.0",
    "PyQt5-sip>=12.0.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "pycryptodome>=3.15.0",
    "ffmpeg-python>=0.2.0",
    "asyncio-throttle>=1.0.0",
    "PyQt-Fluent-Widgets[full]>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
